@@ -1,3 +1,12 @@
+2023-10-18T08:13:56Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6558087593 # 1261
+* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-18
+* notice: last 14d: unq all: 3 10
+* notice: prev accum: outdated-unq outdated-all / unq all: 172 200 / 182 211
+* notice: next accum: outdated-unq outdated-all / unq all: 173 201 / 182 211
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2023-10-04] / []
+
 2023-10-17T08:14:07Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6544385501 # 1258
 * notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-17
